# dexbooru-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
bruno/: app-health-check.bru
bruno/predictions/: folder.bru  predict NSFW tag string rating.bru  predict SFW tag string rating.bru
model_training/: __init__.py
model_training/kaggle_data/: download_danbooru_post_dataset.py
model_training/ml/: train_danbooru_tag_string_rating_predictor.py
model_training/ml/utils/: persistence.py
model_training/preprocessing/: preprocess_danbooru_post_ratings.py
models/metadata/: danbooru_tag_rating_predictor.meta.json
scripts/: push-models-to-s3.sh  test-coverage.sh
src/: main.py
src/consumers/: new_post_consumer.py
src/controllers/api/: health_controller.py  similarity_posts_images_controller.py  tag_rating_controller.py
src/core/: base_predictor.py  consumer.py  dependencies.py
src/ml/: __init__.py  dexbooru_tag_rating_predictor.py
src/models/api_responses/: __init__.py  health.py  post_image_similarity.py  tag_rating.py
src/models/application/: posts.py
src/services/: gemini_client.py  qdrant_client.py  sklearn_model.py  spacy_nlp.py
src/utils/: config.py  image_preprecessor.py  logger.py  server.py
test/: conftest.py
test/consumers/: test_new_post_consumer.py
test/controllers/api/: __init__.py  test_health_controller.py  test_similarity_posts_images_controller.py
test/core/: test_consumer.py
test/ml/: test_dexbooru_tag_rating_predictor.py
test/model_training/ml/utils/: test_persistence.py
test/model_training/preprocessing/: test_preprocess_danbooru_post_ratings.py
test/services/: test_gemini_client.py  test_qdrant_client.py
test/utils/: test_image_preprecessor.py  test_logger.py
