[project]
name = "dexbooru-ai"
version = "1.0.0"
description = "A microservice to handle AI operations like vector search, RAG and basic ML on the Dexbooru image board"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp[speedups]>=3.13.3",
    "en-core-web-md",
    "fastapi[standard]>=0.135.1",
    "google-genai>=1.0.0",
    "pandas>=3.0.1",
    "pika>=1.3.2",
    "pillow>=12.1.1",
    "pydantic-settings>=2.13.1",
    "qdrant-client>=1.17.1",
    "scikit-learn>=1.8.0",
    "skops>=0.13.0",
    "spacy>=3.8.11",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.1.1",
    "kaggle>=2.0.0",
    "pip>=26.0.1",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src", "."]

[tool.ruff]
target-version = "py312"
line-length = 200
src = ["src", "test", "model_training"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# Allow ML-style names (X_train, y_test, etc.); they are not module-level constants.
ignore = ["N806"]

[tool.ruff.format]
quote-style = "double"

[tool.uv.sources]
en-core-web-md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl" }
